--- a/src/locales/bg.json
+++ b/src/locales/bg.json
@@ -238,6 +238,84 @@
 	"kontakt.appointmentInfo": "Отделяме време за вашето здраве. Запишете своя час онлайн – за профилактика, остри оплаквания или консултация. Нашата дигитална система за записване позволява бързо и лесно планиране и минимизира времето за изчакване.",
 	"kontakt.digitalTitle": "Дигитални услуги",
 	"kontakt.digitalInfo": "Използвайте нашите дигитални услуги за бърза и лесна грижа – поръчайте рецепти, направления или болнични онлайн или следете нашия WhatsApp канал.",
+	"kontakt.calendarTitle": "График на лекарите",
+	"kontakt.calendarInfo": "Тук можете да видите наличността на нашите лекари и кога кои лекари са в кабинета.",
+	"footer.slogan1": "Съвременно семейно медицинско обслужване",
+	"footer.slogan2": "по най-високи стандарти.",
+	"footer.openingHours": "Работно време",
+	"footer.opening.monThu": "Пн–Чт: 07:30–12:00 & 14:30–18:00",
+	"footer.opening.fri": "Пт: 07:30–12:00",
+	"footer.opening.friNote": "само видео консултации",
+	"footer.contact": "Контакт",
+	"footer.phone1": "Т: +49 69 870015360",
+	"footer.phone2": "Т: +49 69 84 20 81",
+	"footer.fax": "Ф: +49 69 84 49 72",
+	"footer.email": "info@praxiskerim.de",
+	"footer.addressTitle": "Адрес",
+	"footer.address1": "Jacques-Offenbach-Straße 12",
+	"footer.address2": "63069 Offenbach am Main",
+	"footer.copyright": "Кабинет д-р Керим – Всички права запазени",
+	"footer.impressum": "Контакт",
+	"footer.datenschutz": "Политика за поверителност",
+	"impressum.title": "Контакт",
+	"impressum.practiceInfo.title": "Информация за кабинета",
+	"impressum.practiceInfo.name": "Кабинет д-р Керим",
+	"impressum.practiceInfo.address1": "Jacques-Offenbach-Straße 12",
+	"impressum.practiceInfo.address2": "63069 Offenbach am Main",
+	"impressum.contact.title": "Контакт",
+	"impressum.contact.phone": "Телефон",
+	"impressum.contact.phone2": "Телефон 2",
+	"impressum.contact.fax": "Факс",
+	"impressum.contact.email": "Имейл",
+	"impressum.legal.title": "Правна информация",
+	"impressum.legal.registration": "Професионално звание",
+	"impressum.legal.registrationText": "Лекар",
+	"impressum.legal.taxId": "Данъчен номер",
+	"impressum.legal.taxIdText": "Предоставя се при поискване",
+	"impressum.legal.professionalTitle": "Професионално звание",
+	"impressum.legal.professionalTitleText": "Лекар, получено в Германия",
+	"impressum.legal.responsible": "Отговорен за съдържанието",
+	"impressum.legal.responsibleText": "д-р Керим",
+	"impressum.disclaimer.title": "Отказ от отговорност",
+	"impressum.disclaimer.content1": "Съдържанието на нашите страници е създадено с най-голямо внимание. Въпреки това не можем да гарантираме точността, пълнотата и актуалността на съдържанието.",
+	"impressum.disclaimer.content2": "Като доставчик на услуги, ние сме отговорни за собственото си съдържание на тези страници съгласно общите закони съгласно § 7 Abs.1 TMG.",
+	"impressum.disclaimer.content3": "Съгласно §§ 8 до 10 TMG, ние като доставчици на услуги обаче не сме задължени да следим предавана или съхранявана чужда информация или да търсим обстоятелства, които сочат към незаконна дейност.",
+	"impressum.liability.title": "Отговорност за връзки",
+	"impressum.liability.content1": "Нашата оферта съдържа връзки към външни уебсайтове на трети страни, върху чието съдържание нямаме влияние. Затова не можем да гарантираме и за тези чужди съдържания.",
+	"impressum.liability.content2": "За съдържанието на свързаните страници винаги е отговорен съответният доставчик или оператор на страниците.",
+	"impressum.copyright.title": "Авторско право",
+	"impressum.copyright.content1": "Съдържанието и произведенията, създадени от операторите на страниците на тези страници, са предмет на немското авторско право.",
+	"impressum.copyright.content2": "Възпроизвеждането, редактирането, разпространението и всеки вид използване извън границите на авторското право изискват писмено съгласие от съответния автор или създател.",
+	"datenschutz.title": "Декларация за поверителност",
+	"datenschutz.intro.title": "Поверителност на пръв поглед",
+	"datenschutz.intro.content1": "Операторите на тези страници приемат защитата на вашите лични данни много сериозно. Ние третираме вашите лични данни конфиденциално и в съответствие със законовите разпоредби за защита на данните и тази декларация за поверителност.",
+	"datenschutz.intro.content2": "Използването на нашия уебсайт обикновено е възможно без да се предоставят лични данни. Доколкото на нашите страници се събират лични данни (например име, адрес или имейл адреси), това винаги се прави, доколкото е възможно, на доброволна основа.",
+	"datenschutz.responsible.title": "Отговорен за защита на данните",
+	"datenschutz.responsible.name": "Кабинет д-р Керим",
+	"datenschutz.responsible.address1": "Jacques-Offenbach-Straße 12",
+	"datenschutz.responsible.address2": "63069 Offenbach am Main",
+	"datenschutz.responsible.phone": "Телефон",
+	"datenschutz.responsible.email": "Имейл",
+	"datenschutz.dataCollection.title": "Събиране на данни на нашия уебсайт",
+	"datenschutz.dataCollection.content1": "Кой е отговорен за събирането на данни на този уебсайт? Обработката на данни на този уебсайт се извършва от оператора на уебсайта. Неговите контактни данни можете да намерите в контактната информация на този уебсайт.",
+	"datenschutz.dataCollection.content2": "Как събираме вашите данни? Вашите данни се събират от една страна, като ни ги съобщавате. Това могат да бъдат например данни, които въвеждате в формуляр за контакт.",
+	"datenschutz.dataCollection.content3": "Други данни се събират автоматично от нашите IT системи при посещение на уебсайта. Това са предимно технически данни (например интернет браузър, операционна система или час на достъп до страницата).",
+	"datenschutz.purpose.title": "Цел на събирането на данни",
+	"datenschutz.purpose.content1": "Част от данните се събира, за да се гарантира безпроблемното предоставяне на уебсайта. Други данни могат да се използват за анализ на вашето потребителско поведение.",
+	"datenschutz.purpose.content2": "Какви права имате относно вашите данни? Винаги имате право да получите безплатно информация за произхода, получателя и целта на вашите съхранявани лични данни.",
+	"datenschutz.storage.title": "Съхранение на данни",
+	"datenschutz.storage.content1": "Обработката на данни на този уебсайт се извършва от оператора на уебсайта. Неговите контактни данни можете да намерите в контактната информация на този уебсайт.",
+	"datenschutz.storage.content2": "Вашите данни се изтриват, веднага щом вече не са необходими за изпълнение на целта на събирането.",
+	"datenschutz.rights.title": "Вашите права",
+	"datenschutz.rights.content1": "Имате право на информация за обработваните от нас лични данни.",
+	"datenschutz.rights.content2": "Имате право на корекция на неправилни или допълване на непълни данни.",
+	"datenschutz.rights.content3": "Имате право на изтриване на вашите лични данни, при условие че не се противопоставят законни срокове за съхранение.",
+	"datenschutz.cookies.title": "Бисквитки",
+	"datenschutz.cookies.content1": "Нашите интернет страници частично използват така наречените бисквитки. Бисквитките не причиняват вреда на вашия компютър и не съдържат вируси.",
+	"datenschutz.cookies.content2": "Бисквитките служат да направят нашата оферта по-удобна за потребителя, по-ефективна и по-сигурна.",
+	"datenschutz.contact.title": "Контакт",
+	"datenschutz.contact.content1": "При въпроси относно защитата на данните можете да се свържете с нас по всяко време.",
+	"datenschutz.contact.content2": "Контактните данни можете да намерите в контактната информация на този уебсайт.",
 	"bestellung.heroTitle": "Формуляри за поръчка",
 	"bestellung.infoTitle": "Поръчка на рецепти, направления и болнични",
 	"bestellung.infoText": "Удобно поръчвайте онлайн рецепти, направления или болнични. Обработваме вашата заявка възможно най-бързо.",
