--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -238,6 +238,84 @@
   "kontakt.appointmentInfo": "Wir nehmen uns Zeit für Ihre Gesundheit. Buchen Sie Ihren Termin online – für Vorsorge, akute Beschwerden oder Beratung. Unser digitales Buchungssystem ermöglicht eine schnelle und einfache Planung und minimiert die Wartezeiten.",
   "kontakt.digitalTitle": "Digitale Services",
   "kontakt.digitalInfo": "Nutzen Sie unsere digitalen Services für eine schnelle und unkomplizierte Versorgung – bestellen Sie Rezepte, Überweisungen oder Krankmeldungen online oder bleiben Sie über unseren WhatsApp-Kanal informiert.",
+  "kontakt.calendarTitle": "Arztplanung",
+  "kontakt.calendarInfo": "Hier können Sie die Verfügbarkeit unserer Ärzte einsehen und sehen, wann welche Ärzte in der Praxis sind.",
+  "footer.slogan1": "Moderne hausärztliche Versorgung",
+  "footer.slogan2": "nach höchsten Standards.",
+  "footer.openingHours": "Öffnungszeiten",
+  "footer.opening.monThu": "Mo–Do: 07:30–12:00 & 14:30–18:00",
+  "footer.opening.fri": "Fr: 07:30–12:00",
+  "footer.opening.friNote": "nur Videosprechstunde",
+  "footer.contact": "Kontakt",
+  "footer.phone1": "T: +49 69 870015360",
+  "footer.phone2": "T: +49 69 84 20 81",
+  "footer.fax": "F: +49 69 84 49 72",
+  "footer.email": "info@praxiskerim.de",
+  "footer.addressTitle": "Adresse",
+  "footer.address1": "Jacques-Offenbach-Straße 12",
+  "footer.address2": "63069 Offenbach am Main",
+  "footer.copyright": "Praxis Dr. Kerim – Alle Rechte vorbehalten",
+  "footer.impressum": "Impressum",
+  "footer.datenschutz": "Datenschutz",
+  "impressum.title": "Impressum",
+  "impressum.practiceInfo.title": "Praxisinformationen",
+  "impressum.practiceInfo.name": "Praxis Dr. Kerim",
+  "impressum.practiceInfo.address1": "Jacques-Offenbach-Straße 12",
+  "impressum.practiceInfo.address2": "63069 Offenbach am Main",
+  "impressum.contact.title": "Kontakt",
+  "impressum.contact.phone": "Telefon",
+  "impressum.contact.phone2": "Telefon 2",
+  "impressum.contact.fax": "Fax",
+  "impressum.contact.email": "E-Mail",
+  "impressum.legal.title": "Rechtliche Angaben",
+  "impressum.legal.registration": "Berufsbezeichnung",
+  "impressum.legal.registrationText": "Arzt/Ärztin",
+  "impressum.legal.taxId": "Steuernummer",
+  "impressum.legal.taxIdText": "Wird auf Anfrage mitgeteilt",
+  "impressum.legal.professionalTitle": "Berufsbezeichnung",
+  "impressum.legal.professionalTitleText": "Arzt/Ärztin, verliehen in Deutschland",
+  "impressum.legal.responsible": "Verantwortlich für den Inhalt",
+  "impressum.legal.responsibleText": "Dr. Kerim",
+  "impressum.disclaimer.title": "Haftungsausschluss",
+  "impressum.disclaimer.content1": "Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.",
+  "impressum.disclaimer.content2": "Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.",
+  "impressum.disclaimer.content3": "Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht unter der Verpflichtung, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.",
+  "impressum.liability.title": "Haftung für Links",
+  "impressum.liability.content1": "Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen.",
+  "impressum.liability.content2": "Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.",
+  "impressum.copyright.title": "Urheberrecht",
+  "impressum.copyright.content1": "Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht.",
+  "impressum.copyright.content2": "Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.",
+  "datenschutz.title": "Datenschutzerklärung",
+  "datenschutz.intro.title": "Datenschutz auf einen Blick",
+  "datenschutz.intro.content1": "Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.",
+  "datenschutz.intro.content2": "Die Nutzung unserer Website ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis.",
+  "datenschutz.responsible.title": "Datenschutzbeauftragter",
+  "datenschutz.responsible.name": "Praxis Dr. Kerim",
+  "datenschutz.responsible.address1": "Jacques-Offenbach-Straße 12",
+  "datenschutz.responsible.address2": "63069 Offenbach am Main",
+  "datenschutz.responsible.phone": "Telefon",
+  "datenschutz.responsible.email": "E-Mail",
+  "datenschutz.dataCollection.title": "Datenerhebung auf unserer Website",
+  "datenschutz.dataCollection.content1": "Wer ist verantwortlich für die Datenerhebung auf dieser Website? Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen Kontaktdaten können Sie dem Impressum dieser Website entnehmen.",
+  "datenschutz.dataCollection.content2": "Wie erfassen wir Ihre Daten? Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese mitteilen. Hierbei kann es sich z.B. um Daten handeln, die Sie in ein Kontaktformular eingeben.",
+  "datenschutz.dataCollection.content3": "Andere Daten werden automatisch beim Besuch der Website durch unsere IT-Systeme erfasst. Das sind vor allem technische Daten (z.B. Internetbrowser, Betriebssystem oder Uhrzeit des Seitenaufrufs).",
+  "datenschutz.purpose.title": "Zweck der Datenerhebung",
+  "datenschutz.purpose.content1": "Ein Teil der Daten wird erhoben, um eine fehlerfreie Bereitstellung der Website zu gewährleisten. Andere Daten können zur Analyse Ihres Nutzerverhaltens verwendet werden.",
+  "datenschutz.purpose.content2": "Welche Rechte haben Sie bezüglich Ihrer Daten? Sie haben jederzeit das Recht unentgeltlich Auskunft über Herkunft, Empfänger und Zweck Ihrer gespeicherten personenbezogenen Daten zu erhalten.",
+  "datenschutz.storage.title": "Datenspeicherung",
+  "datenschutz.storage.content1": "Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber. Dessen Kontaktdaten können Sie dem Impressum dieser Website entnehmen.",
+  "datenschutz.storage.content2": "Ihre Daten werden gelöscht, sobald diese für die Erfüllung des Zwecks der Erhebung nicht mehr erforderlich sind.",
+  "datenschutz.rights.title": "Ihre Rechte",
+  "datenschutz.rights.content1": "Sie haben das Recht auf Auskunft über die von uns verarbeiteten personenbezogenen Daten.",
+  "datenschutz.rights.content2": "Sie haben das Recht auf Berichtigung unrichtiger oder Vervollständigung unvollständiger Daten.",
+  "datenschutz.rights.content3": "Sie haben das Recht auf Löschung Ihrer personenbezogenen Daten, sofern keine gesetzlichen Aufbewahrungsfristen entgegenstehen.",
+  "datenschutz.cookies.title": "Cookies",
+  "datenschutz.cookies.content1": "Unsere Internetseiten verwenden teilweise so genannte Cookies. Cookies richten auf Ihrem Rechner keinen Schaden an und enthalten keine Viren.",
+  "datenschutz.cookies.content2": "Cookies dienen dazu, unser Angebot nutzerfreundlicher, effektiver und sicherer zu machen.",
+  "datenschutz.contact.title": "Kontakt",
+  "datenschutz.contact.content1": "Bei Fragen zum Datenschutz können Sie sich jederzeit an uns wenden.",
+  "datenschutz.contact.content2": "Die Kontaktdaten finden Sie im Impressum dieser Website.",
   "bestellung.heroTitle": "Bestellformulare",
   "bestellung.infoTitle": "Rezepte, Überweisungen & Krankmeldungen bestellen",
   "bestellung.infoText": "Bestellen Sie bequem online Rezepte, Überweisungen oder Krankmeldungen. Wir bearbeiten Ihre Anfrage schnellstmöglich.",
