--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -237,6 +237,84 @@
 		"kontakt.appointmentInfo": "We take time for your health. Book your appointment online – for check-ups, acute complaints or consultations. Our digital booking system enables quick and easy planning, minimizing waiting times.",
 		"kontakt.digitalTitle": "Digital Services",
 		"kontakt.digitalInfo": "Use our digital services for fast and uncomplicated care – order prescriptions, referrals or sick notes online or stay informed via our WhatsApp channel.",
+		"kontakt.calendarTitle": "Doctor Schedule",
+		"kontakt.calendarInfo": "Here you can view the availability of our doctors and see when which doctors are in the practice.",
+		"footer.slogan1": "Modern family medicine care",
+		"footer.slogan2": "to the highest standards.",
+		"footer.openingHours": "Opening Hours",
+		"footer.opening.monThu": "Mon–Thu: 07:30–12:00 & 14:30–18:00",
+		"footer.opening.fri": "Fri: 07:30–12:00",
+		"footer.opening.friNote": "video consultation only",
+		"footer.contact": "Contact",
+		"footer.phone1": "T: +49 69 870015360",
+		"footer.phone2": "T: +49 69 84 20 81",
+		"footer.fax": "F: +49 69 84 49 72",
+		"footer.email": "info@praxiskerim.de",
+		"footer.addressTitle": "Address",
+		"footer.address1": "Jacques-Offenbach-Straße 12",
+		"footer.address2": "63069 Offenbach am Main",
+		"footer.copyright": "Dr. Kerim Practice – All rights reserved",
+		"footer.impressum": "Imprint",
+		"footer.datenschutz": "Privacy Policy",
+		"impressum.title": "Imprint",
+		"impressum.practiceInfo.title": "Practice Information",
+		"impressum.practiceInfo.name": "Dr. Kerim Practice",
+		"impressum.practiceInfo.address1": "Jacques-Offenbach-Straße 12",
+		"impressum.practiceInfo.address2": "63069 Offenbach am Main",
+		"impressum.contact.title": "Contact",
+		"impressum.contact.phone": "Phone",
+		"impressum.contact.phone2": "Phone 2",
+		"impressum.contact.fax": "Fax",
+		"impressum.contact.email": "Email",
+		"impressum.legal.title": "Legal Information",
+		"impressum.legal.registration": "Professional Title",
+		"impressum.legal.registrationText": "Doctor",
+		"impressum.legal.taxId": "Tax ID",
+		"impressum.legal.taxIdText": "Available upon request",
+		"impressum.legal.professionalTitle": "Professional Title",
+		"impressum.legal.professionalTitleText": "Doctor, conferred in Germany",
+		"impressum.legal.responsible": "Responsible for Content",
+		"impressum.legal.responsibleText": "Dr. Kerim",
+		"impressum.disclaimer.title": "Disclaimer",
+		"impressum.disclaimer.content1": "The contents of our pages have been created with the utmost care. However, we cannot guarantee the accuracy, completeness and timeliness of the content.",
+		"impressum.disclaimer.content2": "As a service provider, we are responsible for our own content on these pages according to general laws pursuant to § 7 para.1 TMG.",
+		"impressum.disclaimer.content3": "According to §§ 8 to 10 TMG, we as service providers are not obliged to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity.",
+		"impressum.liability.title": "Liability for Links",
+		"impressum.liability.content1": "Our offer contains links to external websites of third parties, on whose contents we have no influence. Therefore, we cannot assume any liability for these external contents.",
+		"impressum.liability.content2": "The respective provider or operator of the pages is always responsible for the content of the linked pages.",
+		"impressum.copyright.title": "Copyright",
+		"impressum.copyright.content1": "The content and works created by the site operators on these pages are subject to German copyright law.",
+		"impressum.copyright.content2": "The reproduction, editing, distribution and any kind of exploitation outside the limits of copyright require the written consent of the respective author or creator.",
+		"datenschutz.title": "Privacy Policy",
+		"datenschutz.intro.title": "Privacy at a Glance",
+		"datenschutz.intro.content1": "The operators of these pages take the protection of your personal data very seriously. We treat your personal data confidentially and in accordance with the statutory data protection regulations and this privacy policy.",
+		"datenschutz.intro.content2": "The use of our website is usually possible without providing personal information. Insofar as personal data (such as name, address or e-mail addresses) is collected on our pages, this is always done, as far as possible, on a voluntary basis.",
+		"datenschutz.responsible.title": "Data Protection Officer",
+		"datenschutz.responsible.name": "Dr. Kerim Practice",
+		"datenschutz.responsible.address1": "Jacques-Offenbach-Straße 12",
+		"datenschutz.responsible.address2": "63069 Offenbach am Main",
+		"datenschutz.responsible.phone": "Phone",
+		"datenschutz.responsible.email": "Email",
+		"datenschutz.dataCollection.title": "Data Collection on Our Website",
+		"datenschutz.dataCollection.content1": "Who is responsible for data collection on this website? The data processing on this website is carried out by the website operator. You can find their contact details in the imprint of this website.",
+		"datenschutz.dataCollection.content2": "How do we collect your data? On the one hand, your data is collected when you communicate it to us. This can be, for example, data that you enter in a contact form.",
+		"datenschutz.dataCollection.content3": "Other data is collected automatically by our IT systems when you visit the website. These are mainly technical data (e.g. internet browser, operating system or time of page access).",
+		"datenschutz.purpose.title": "Purpose of Data Collection",
+		"datenschutz.purpose.content1": "Some of the data is collected to ensure error-free provision of the website. Other data may be used to analyze your user behavior.",
+		"datenschutz.purpose.content2": "What rights do you have regarding your data? You have the right to obtain information about the origin, recipient and purpose of your stored personal data at any time free of charge.",
+		"datenschutz.storage.title": "Data Storage",
+		"datenschutz.storage.content1": "The data processing on this website is carried out by the website operator. You can find their contact details in the imprint of this website.",
+		"datenschutz.storage.content2": "Your data will be deleted as soon as it is no longer required for the fulfillment of the purpose of collection.",
+		"datenschutz.rights.title": "Your Rights",
+		"datenschutz.rights.content1": "You have the right to information about the personal data we process.",
+		"datenschutz.rights.content2": "You have the right to correction of incorrect or completion of incomplete data.",
+		"datenschutz.rights.content3": "You have the right to deletion of your personal data, provided that no legal retention periods oppose this.",
+		"datenschutz.cookies.title": "Cookies",
+		"datenschutz.cookies.content1": "Our websites partially use so-called cookies. Cookies do not cause any damage to your computer and do not contain viruses.",
+		"datenschutz.cookies.content2": "Cookies serve to make our offer more user-friendly, effective and secure.",
+		"datenschutz.contact.title": "Contact",
+		"datenschutz.contact.content1": "If you have any questions about data protection, you can contact us at any time.",
+		"datenschutz.contact.content2": "You can find the contact details in the imprint of this website.",
 			"bestellung.heroTitle": "Order Forms",
 	"bestellung.infoTitle": "Order prescriptions, referrals & sick notes",
 	"bestellung.infoText": "Order conveniently online prescriptions, referrals or sick notes. We process your request as quickly as possible.",
