--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -246,6 +246,84 @@
   "beschneidungen": "Obrzezania",
   "kontakt.digitalTitle": "Usługi cyfrowe",
   "kontakt.digitalInfo": "Skorzystaj z naszych usług cyfrowych, aby szybko i wygodnie uzyskać pomoc – zamów recepty, skierowania lub zwolnienia online albo bądź na bieżąco przez nasz kanał WhatsApp.",
+  "kontakt.calendarTitle": "Harmonogram lekarzy",
+  "kontakt.calendarInfo": "Tutaj możesz sprawdzić dostępność naszych lekarzy i zobaczyć, kiedy który lekarz jest w przychodni.",
+  "footer.slogan1": "Nowoczesna opieka medycyny rodzinnej",
+  "footer.slogan2": "na najwyższym poziomie.",
+  "footer.openingHours": "Godziny otwarcia",
+  "footer.opening.monThu": "Pn–Cz: 07:30–12:00 & 14:30–18:00",
+  "footer.opening.fri": "Pt: 07:30–12:00",
+  "footer.opening.friNote": "tylko konsultacje wideo",
+  "footer.contact": "Kontakt",
+  "footer.phone1": "T: +49 69 870015360",
+  "footer.phone2": "T: +49 69 84 20 81",
+  "footer.fax": "F: +49 69 84 49 72",
+  "footer.email": "info@praxiskerim.de",
+  "footer.addressTitle": "Adres",
+  "footer.address1": "Jacques-Offenbach-Straße 12",
+  "footer.address2": "63069 Offenbach am Main",
+  "footer.copyright": "Przychodnia dr Kerima – Wszystkie prawa zastrzeżone",
+  "footer.impressum": "Dane kontaktowe",
+  "footer.datenschutz": "Polityka prywatności",
+  "impressum.title": "Dane kontaktowe",
+  "impressum.practiceInfo.title": "Informacje o przychodni",
+  "impressum.practiceInfo.name": "Przychodnia dr Kerima",
+  "impressum.practiceInfo.address1": "Jacques-Offenbach-Straße 12",
+  "impressum.practiceInfo.address2": "63069 Offenbach am Main",
+  "impressum.contact.title": "Kontakt",
+  "impressum.contact.phone": "Telefon",
+  "impressum.contact.phone2": "Telefon 2",
+  "impressum.contact.fax": "Faks",
+  "impressum.contact.email": "E-mail",
+  "impressum.legal.title": "Informacje prawne",
+  "impressum.legal.registration": "Tytuł zawodowy",
+  "impressum.legal.registrationText": "Lekarz",
+  "impressum.legal.taxId": "Numer podatkowy",
+  "impressum.legal.taxIdText": "Dostępny na żądanie",
+  "impressum.legal.professionalTitle": "Tytuł zawodowy",
+  "impressum.legal.professionalTitleText": "Lekarz, nadany w Niemczech",
+  "impressum.legal.responsible": "Odpowiedzialny za treść",
+  "impressum.legal.responsibleText": "dr Kerim",
+  "impressum.disclaimer.title": "Zastrzeżenie",
+  "impressum.disclaimer.content1": "Treści naszych stron zostały stworzone z największą starannością. Nie możemy jednak zagwarantować poprawności, kompletności i aktualności treści.",
+  "impressum.disclaimer.content2": "Jako dostawca usług jesteśmy odpowiedzialni za własne treści na tych stronach zgodnie z ogólnymi przepisami prawa zgodnie z § 7 ust. 1 TMG.",
+  "impressum.disclaimer.content3": "Zgodnie z §§ 8-10 TMG nie jesteśmy jednak jako dostawca usług zobowiązani do monitorowania przekazywanych lub przechowywanych informacji osób trzecich lub do badania okoliczności wskazujących na nielegalną działalność.",
+  "impressum.liability.title": "Odpowiedzialność za linki",
+  "impressum.liability.content1": "Nasza oferta zawiera linki do zewnętrznych stron internetowych osób trzecich, na których treści nie mamy wpływu. Dlatego nie możemy zagwarantować również tych obcych treści.",
+  "impressum.liability.content2": "Za treści połączonych stron zawsze odpowiedzialny jest odpowiedni dostawca lub operator stron.",
+  "impressum.copyright.title": "Prawa autorskie",
+  "impressum.copyright.content1": "Treści i dzieła stworzone przez operatorów stron na tych stronach podlegają niemieckiemu prawu autorskiemu.",
+  "impressum.copyright.content2": "Reprodukcja, edycja, dystrybucja i każdy rodzaj wykorzystania poza granicami praw autorskich wymaga pisemnej zgody odpowiedniego autora lub twórcy.",
+  "datenschutz.title": "Polityka prywatności",
+  "datenschutz.intro.title": "Prywatność w skrócie",
+  "datenschutz.intro.content1": "Operatorzy tych stron bardzo poważnie traktują ochronę Twoich danych osobowych. Traktujemy Twoje dane osobowe poufnie i zgodnie z prawnymi przepisami o ochronie danych oraz tą polityką prywatności.",
+  "datenschutz.intro.content2": "Korzystanie z naszej strony internetowej jest zwykle możliwe bez podawania danych osobowych. O ile na naszych stronach zbierane są dane osobowe (np. imię, adres lub adresy e-mail), odbywa się to, o ile to możliwe, zawsze na zasadzie dobrowolności.",
+  "datenschutz.responsible.title": "Odpowiedzialny za ochronę danych",
+  "datenschutz.responsible.name": "Przychodnia dr Kerima",
+  "datenschutz.responsible.address1": "Jacques-Offenbach-Straße 12",
+  "datenschutz.responsible.address2": "63069 Offenbach am Main",
+  "datenschutz.responsible.phone": "Telefon",
+  "datenschutz.responsible.email": "E-mail",
+  "datenschutz.dataCollection.title": "Zbieranie danych na naszej stronie internetowej",
+  "datenschutz.dataCollection.content1": "Kto jest odpowiedzialny za zbieranie danych na tej stronie internetowej? Przetwarzanie danych na tej stronie internetowej odbywa się przez operatora strony internetowej. Jego dane kontaktowe można znaleźć w danych kontaktowych tej strony internetowej.",
+  "datenschutz.dataCollection.content2": "Jak zbieramy Twoje dane? Twoje dane są zbierane z jednej strony przez to, że nam je przekazujesz. Mogą to być na przykład dane, które wprowadzasz w formularzu kontaktowym.",
+  "datenschutz.dataCollection.content3": "Inne dane są automatycznie zbierane przez nasze systemy IT podczas odwiedzania strony internetowej. Są to głównie dane techniczne (np. przeglądarka internetowa, system operacyjny lub czas dostępu do strony).",
+  "datenschutz.purpose.title": "Cel zbierania danych",
+  "datenschutz.purpose.content1": "Część danych jest zbierana, aby zagwarantować bezbłędne świadczenie strony internetowej. Inne dane mogą być wykorzystywane do analizy Twojego zachowania użytkownika.",
+  "datenschutz.purpose.content2": "Jakie prawa masz w odniesieniu do swoich danych? Zawsze masz prawo do bezpłatnej informacji o pochodzeniu, odbiorcy i celu Twoich przechowywanych danych osobowych.",
+  "datenschutz.storage.title": "Przechowywanie danych",
+  "datenschutz.storage.content1": "Przetwarzanie danych na tej stronie internetowej odbywa się przez operatora strony internetowej. Jego dane kontaktowe można znaleźć w danych kontaktowych tej strony internetowej.",
+  "datenschutz.storage.content2": "Twoje dane są usuwane, gdy nie są już potrzebne do realizacji celu zbierania.",
+  "datenschutz.rights.title": "Twoje prawa",
+  "datenschutz.rights.content1": "Masz prawo do informacji o przetwarzanych przez nas danych osobowych.",
+  "datenschutz.rights.content2": "Masz prawo do korekty nieprawidłowych lub uzupełnienia niepełnych danych.",
+  "datenschutz.rights.content3": "Masz prawo do usunięcia swoich danych osobowych, o ile nie stoją temu na przeszkodzie prawne okresy przechowywania.",
+  "datenschutz.cookies.title": "Pliki cookie",
+  "datenschutz.cookies.content1": "Nasze strony internetowe częściowo używają tak zwanych plików cookie. Pliki cookie nie powodują szkód na Twoim komputerze i nie zawierają wirusów.",
+  "datenschutz.cookies.content2": "Pliki cookie służą do uczynienia naszej oferty bardziej przyjazną dla użytkownika, skuteczną i bezpieczną.",
+  "datenschutz.contact.title": "Kontakt",
+  "datenschutz.contact.content1": "W przypadku pytań dotyczących ochrony danych możesz w każdej chwili skontaktować się z nami.",
+  "datenschutz.contact.content2": "Dane kontaktowe można znaleźć w danych kontaktowych tej strony internetowej.",
   "about.orderForm": "Formularz zamówienia",
   "about.whatsappChannel": "Kanał WhatsApp",
   "beschneidungen.heroTitle": "Obrzezania",
