--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -237,6 +237,84 @@
   "kontakt.appointmentInfo": "Sağlığınız için zaman ayırıyoruz. Korunma, akut şikayetler veya danışmanlık için online randevu alın. Dijital randevu sistemimiz hızlı ve kolay planlama sağlar ve bekleme sürelerini en aza indirir.",
   "kontakt.digitalTitle": "Dijital Hizmetler",
   "kontakt.digitalInfo": "Hızlı ve kolay sağlık hizmeti için dijital servislerimizi kullanın – reçete, sevk veya raporlarınızı online sipariş edin ya da WhatsApp kanalımızdan bilgi alın.",
+  "kontakt.calendarTitle": "Doktor Planlaması",
+  "kontakt.calendarInfo": "Burada doktorlarımızın müsaitlik durumunu görebilir ve hangi doktorların ne zaman kliniğimizde olduğunu öğrenebilirsiniz.",
+  "footer.slogan1": "Modern aile hekimliği bakımı",
+  "footer.slogan2": "en yüksek standartlarda.",
+  "footer.openingHours": "Çalışma Saatleri",
+  "footer.opening.monThu": "Pzt–Per: 07:30–12:00 & 14:30–18:00",
+  "footer.opening.fri": "Cum: 07:30–12:00",
+  "footer.opening.friNote": "sadece video konsültasyon",
+  "footer.contact": "İletişim",
+  "footer.phone1": "T: +49 69 870015360",
+  "footer.phone2": "T: +49 69 84 20 81",
+  "footer.fax": "F: +49 69 84 49 72",
+  "footer.email": "info@praxiskerim.de",
+  "footer.addressTitle": "Adres",
+  "footer.address1": "Jacques-Offenbach-Straße 12",
+  "footer.address2": "63069 Offenbach am Main",
+  "footer.copyright": "Dr. Kerim Kliniği – Tüm hakları saklıdır",
+  "footer.impressum": "İletişim Bilgileri",
+  "footer.datenschutz": "Gizlilik Politikası",
+  "impressum.title": "İletişim Bilgileri",
+  "impressum.practiceInfo.title": "Klinik Bilgileri",
+  "impressum.practiceInfo.name": "Dr. Kerim Kliniği",
+  "impressum.practiceInfo.address1": "Jacques-Offenbach-Straße 12",
+  "impressum.practiceInfo.address2": "63069 Offenbach am Main",
+  "impressum.contact.title": "İletişim",
+  "impressum.contact.phone": "Telefon",
+  "impressum.contact.phone2": "Telefon 2",
+  "impressum.contact.fax": "Faks",
+  "impressum.contact.email": "E-posta",
+  "impressum.legal.title": "Yasal Bilgiler",
+  "impressum.legal.registration": "Meslek Unvanı",
+  "impressum.legal.registrationText": "Doktor",
+  "impressum.legal.taxId": "Vergi Numarası",
+  "impressum.legal.taxIdText": "Talep üzerine bildirilir",
+  "impressum.legal.professionalTitle": "Meslek Unvanı",
+  "impressum.legal.professionalTitleText": "Doktor, Almanya'da verilmiştir",
+  "impressum.legal.responsible": "İçerikten Sorumlu",
+  "impressum.legal.responsibleText": "Dr. Kerim",
+  "impressum.disclaimer.title": "Sorumluluk Reddi",
+  "impressum.disclaimer.content1": "Sayfalarımızın içerikleri en büyük özenle oluşturulmuştur. Ancak içeriklerin doğruluğu, eksiksizliği ve güncelliği konusunda garanti veremeyiz.",
+  "impressum.disclaimer.content2": "Hizmet sağlayıcı olarak, genel yasalara göre bu sayfalardaki kendi içeriklerimizden § 7 Abs.1 TMG uyarınca sorumluyuz.",
+  "impressum.disclaimer.content3": "Ancak §§ 8-10 TMG'ye göre, hizmet sağlayıcı olarak iletilen veya saklanan üçüncü taraf bilgilerini izlemek veya yasadışı faaliyetleri gösteren durumları araştırmakla yükümlü değiliz.",
+  "impressum.liability.title": "Bağlantılar için Sorumluluk",
+  "impressum.liability.content1": "Teklifimiz, içerikleri üzerinde etkimiz olmayan üçüncü tarafların harici web sitelerine bağlantılar içerir. Bu nedenle bu harici içerikler için de garanti veremeyiz.",
+  "impressum.liability.content2": "Bağlantılı sayfaların içeriklerinden her zaman ilgili sağlayıcı veya sayfa operatörü sorumludur.",
+  "impressum.copyright.title": "Telif Hakkı",
+  "impressum.copyright.content1": "Sayfa operatörleri tarafından bu sayfalarda oluşturulan içerikler ve eserler Alman telif hakkı yasasına tabidir.",
+  "impressum.copyright.content2": "Telif hakkı sınırları dışındaki çoğaltma, düzenleme, dağıtım ve her türlü kullanım, ilgili yazar veya oluşturucunun yazılı iznini gerektirir.",
+  "datenschutz.title": "Gizlilik Politikası",
+  "datenschutz.intro.title": "Gizlilik Özeti",
+  "datenschutz.intro.content1": "Bu sayfaların operatörleri kişisel verilerinizin korunmasını çok ciddiye alır. Kişisel verilerinizi gizli tutar ve yasal veri koruma düzenlemeleri ile bu gizlilik politikasına uygun olarak işleriz.",
+  "datenschutz.intro.content2": "Web sitemizi kullanmak genellikle kişisel bilgi vermeden mümkündür. Sayfalarımızda kişisel veriler (örneğin ad, adres veya e-posta adresleri) toplandığında, bu mümkün olduğunca her zaman gönüllü olarak yapılır.",
+  "datenschutz.responsible.title": "Veri Koruma Sorumlusu",
+  "datenschutz.responsible.name": "Dr. Kerim Kliniği",
+  "datenschutz.responsible.address1": "Jacques-Offenbach-Straße 12",
+  "datenschutz.responsible.address2": "63069 Offenbach am Main",
+  "datenschutz.responsible.phone": "Telefon",
+  "datenschutz.responsible.email": "E-posta",
+  "datenschutz.dataCollection.title": "Web Sitemizde Veri Toplama",
+  "datenschutz.dataCollection.content1": "Bu web sitesinde veri toplamadan kim sorumlu? Bu web sitesindeki veri işleme web sitesi operatörü tarafından gerçekleştirilir. İletişim bilgilerini bu web sitesinin iletişim bilgileri bölümünde bulabilirsiniz.",
+  "datenschutz.dataCollection.content2": "Verilerinizi nasıl topluyoruz? Verileriniz bir yandan bize bildirdiğinizde toplanır. Bu, örneğin bir iletişim formuna girdiğiniz veriler olabilir.",
+  "datenschutz.dataCollection.content3": "Diğer veriler web sitesini ziyaret ettiğinizde IT sistemlerimiz tarafından otomatik olarak toplanır. Bunlar özellikle teknik verilerdir (örneğin internet tarayıcısı, işletim sistemi veya sayfa erişim zamanı).",
+  "datenschutz.purpose.title": "Veri Toplama Amacı",
+  "datenschutz.purpose.content1": "Verilerin bir kısmı web sitesinin hatasız sağlanmasını garanti etmek için toplanır. Diğer veriler kullanıcı davranışınızı analiz etmek için kullanılabilir.",
+  "datenschutz.purpose.content2": "Verilerinizle ilgili hangi haklara sahipsiniz? Saklanan kişisel verilerinizin kaynağı, alıcısı ve amacı hakkında her zaman ücretsiz bilgi alma hakkınız vardır.",
+  "datenschutz.storage.title": "Veri Saklama",
+  "datenschutz.storage.content1": "Bu web sitesindeki veri işleme web sitesi operatörü tarafından gerçekleştirilir. İletişim bilgilerini bu web sitesinin iletişim bilgileri bölümünde bulabilirsiniz.",
+  "datenschutz.storage.content2": "Verileriniz, toplama amacının yerine getirilmesi için artık gerekli olmadığında silinir.",
+  "datenschutz.rights.title": "Haklarınız",
+  "datenschutz.rights.content1": "İşlediğimiz kişisel veriler hakkında bilgi alma hakkınız vardır.",
+  "datenschutz.rights.content2": "Yanlış verileri düzeltme veya eksik verileri tamamlama hakkınız vardır.",
+  "datenschutz.rights.content3": "Yasal saklama süreleri karşı çıkmadığı sürece kişisel verilerinizi silme hakkınız vardır.",
+  "datenschutz.cookies.title": "Çerezler",
+  "datenschutz.cookies.content1": "İnternet sayfalarımız kısmen çerez adı verilen teknolojileri kullanır. Çerezler bilgisayarınıza zarar vermez ve virüs içermez.",
+  "datenschutz.cookies.content2": "Çerezler teklifimizi daha kullanıcı dostu, etkili ve güvenli hale getirmeye hizmet eder.",
+  "datenschutz.contact.title": "İletişim",
+  "datenschutz.contact.content1": "Veri koruma konusunda sorularınız için her zaman bize başvurabilirsiniz.",
+  "datenschutz.contact.content2": "İletişim bilgilerini bu web sitesinin iletişim bilgileri bölümünde bulabilirsiniz.",
   "bestellung.heroTitle": "Sipariş Formları",
   "bestellung.infoTitle": "Reçete, sevk ve rapor siparişi",
   "bestellung.infoText": "Reçete, sevk veya raporları online olarak kolayca sipariş edin. Talebinizi en kısa sürede işleme alıyoruz.",
